# rrt

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: benchmark.rs
src/: acceleration.rs  book2chap2.rs  camera.rs  chap11.rs  chap12.rs  fp.rs  hittable.rs  lib.rs  main.rs  materials.rs  rng.rs  scene.rs  simd_llvm.rs  sphere.rs  threadpool.rs  types.rs
