[package]
name = "rrt"
version = "0.1.0"
authors = ["Jean-Francois Roy <jf@devklog.net>"]
edition = "2021"
resolver = "2"

[dependencies]
arrayvec = "0.7"
clap = "4.4"
image = "0.24"
indicatif = "0.17"
itertools = "0.11.0"
palette = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
rayon = "1.7"
ultraviolet = "0.9"
wide = "0.7"

[profile.release]
debug = true
lto = "fat"
opt-level = 3
panic = "abort"

[profile.bench]
lto = "fat"
opt-level = 3

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
